--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23754,6 +23754,59 @@
 "~^/danbooru2021/index.html.*$" "/Danbooru2021";
 "~^/docs/genetics/heritable/1987-zimen.pdf.*Wolfdogs.*$" "/docs/genetics/heritable/1987-zimen.pdf";
 "~^/agents$" "/Tool-AI";
+"~^/docs/science/2020-sheng.pdf.*$" "/docs/science/2020-zheng.pdf";
+"~^/subculture$" "/The-Melancholy-of-Subculture-Society";
+"~^/terrorism-is-not-Effective.*$" "/Terrorism-is-not-Effective";
+"~^/docs/cat/catnip/survey/2017-08-01$" "/docs/cat/catnip/survey/2017-08-01-gs-reversed.csv";
+"~^/docs/ai/poetry/2019-03-16-gpt2-poetry-prefix-jabberwocky$" "/docs/ai/poetry/2019-03-16-gpt2-poetry-prefix-jabberwocky-100samples.txt";
+"~^/.../2013-dubin-fabliauxtranslations--stmartinsfourwishes.pdf$" "/docs/history/2013-dubin-fabliauxtranslations-stmartinsfourwishes.pdf";
+"~^/zeo/1$" "/docs/zeo/index";
+"~^/Terrorism-is-not-Effective/n.*$" "/Terrorism-is-not-Effective/";
+"~^/Statistical-notes//.*$" "/Statistical-notes";
+"~^/static/js/darkmode-inline.js.html.*$" "/static/js/dark-mode-inline.js.html";
+"~^/static/img/icons/japanesecrest-oookashippouofoookatadasuke-sun.svg.*$" "https://commons.wikimedia.org/wiki/File:Japanese_crest_Oooka_Shippou_of_Oooka_Tadasuke.svg";
+"~^/static/font/drop-cap/de-zs/DeutscheZierschrift$" "/static/font/drop-cap/de-zs/";
+"~^/static/font/drop-cap/Cheshire-Initials-Q.ttf.*$" "/static/font/drop-cap/cheshire/Cheshire-Initials-Q.ttf";
+"~^/Slowing-Moore$" "/Slowing-Moores-Law";
+"~^/plastinationHall.*$" "/plastination";
+"~^/Lewis-meditation//.*$" "/Lewis-meditation";
+"~^/irc:/irc.freenode.net.*$" "https://libera.chat/";
+"~^/GPT-237.*$" "/GPT-2";
+"~^/https://www.worksinprogress.co/issue/the-maintenance-race/.*$" "https://www.worksinprogress.co/issue/the-maintenance-race/";
+"~^/docs/technology/2017-02-05-cms-ahistoryofimdbforums$" "/docs/technology/2017-02-05-cms-ahistoryofimdbforums.html";
+"~^/docs/technology/2005-shirky-agroupisitsownworstenemy$" "/docs/technology/2005-shirky-agroupisitsownworstenemy.pdf";
+"~^/docs/psychology/cs/1955-nash$" "/docs/cs/cryptography/1955-nash";
+"~^/docs/psychology/2019-lim.pdftet.*$" "/docs/psychology/2019-lim.pdf";
+"~^/docs/psychology/2019-hsu.pdf%C2%A0.*$" "/docs/psychology/2019-hsu.pdf";
+"~^/docs/nootropic/quantified-self/2019-1$" "/docs/nootropic/quantified-self/index";
+"~^/docs/nootropic/quantified-self/2018-05-%C.*$" "/docs/nootropic/quantified-self/2018-05-17-gwern-bacopa.csv";
+"~^/docs/nootropic/quantified-self/2014-08-145$" "/docs/nootropic/quantified-self/index";
+"~^/docs/nootropic/quantified-self/2014-08-08-0.*$" "/docs/nootropic/quantified-self/2014-08-08-lllt-correlation-factoranalysis.csv";
+"~^/docs/-nature/2010-peen.pdf.*$" "/docs/nature/2010-peen.pdf";
+"~^/docs/music-dpurnell-webb-and-speelmanistraction/1989-salame.pdf.*$" "/docs/music-distraction/1989-salame.pdf";
+"~^/docs/-music-distraction/1991-tucker.pdf.*$" "/docs/music-distraction/1991-tucker.pdf";
+"~^/docs/modafinil/darknet-market/2013-09-20.tar$" "/docs/modafinil/darknet-market/2013-09-20.tar.xz";
+"~^/docs/link-bibliography/about@link-bibliography.*$" "/docs/link-bibliography/About#link-bibliography";
+"~^/docs/iq/2017-lynn.pdf$" "/docs/iq/2017-flynn.pdf";
+"~^/docs/iq/1995-cochrane-biologicallimitstoinformationprocessinginthebrain$" "/docs/iq/1995-cochrane-biologicallimitstoinformationprocessinginthebrain.html";
+"~^/docs/history/2019-09-18-medievalindonesia-thelandshuterhochzeit1475$" "/docs/history/2019-09-18-medievalindonesia-thelandshuterhochzeit1475.html";
+"~^/docs/haskell/$" "/docs/cs/haskell/index";
+"~^/docs/genetics/selection/1958-cooper.pdf,.*$" "/docs/genetics/selection/1958-cooper.pdf";
+"~^/docs/existential-risk/2013-evansarieyh-doingenough$" "/docs/existential-risk/2013-evansarieyh-doingenough.html";
+"~^/docs/economics/2009-friedman-seasteadingpracticalguide.pdf.*$" "/docs/economics/2009-friedman-seasteadingapracticalguide.pdf";
+"~^/docs/darknet-markets/2013-05-05$" "/docs/darknet-markets/index";
+"~^/docs/darknet-markets/2012-05-02-tony76postmortem$" "/docs/darknet-markets/2012-05-02-tony76postmortem.mht";
+"~^/docs/ai/2019-02-27-1$" "/docs/ai/2019-02-27-synced-fromfacestokittiestoapartments.html";
+"~^/docs/-1989-lewis.pdf.*$" "/docs/philosophy/ethics/1989-lewis.pdf";
+"~^/docs/0$" "/docs/index";
+"~^/Death-Note-script3.*$" "/Death-Note-script";
+"~^/\[Dd\]esign-G.*$" "/Design";
+"~^/Culture-is-not-about-esthetics.html.*$" "/Culture-is-not-about-esthetics";
+"~^/Causality-\|*$" "/Causality";
+"~^/Causalityr.*$" "/Causality";
+"~^/blackmarket-survival.*$" "/DNM-survival";
+"~^/About-exit-scam.*$" "/About";
+"~^/problem-14.*$" "/Problem-14";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -28460,7 +28513,62 @@
 "~^/.*widget-advert.text-cente.*$" "/static/404";
 "~^/hastaresort.*$" "/static/404";
 "~^/Riar-Anapa.*$" "/static/404";
-"~^/docs/www/learning.mpi-sws.org/data/example2.json.*$" "/static/404";
+"~^/docs/www/learning.mpi-sws.org/data/example.*$" "/static/404";
+"~^/customers/.*$" "/static/404";
+"~^/cron.*$" "/static/404";
+"~^/conf.*$" "/static/404";
+"~^/cfg.*$" "/static/404";
+"~^/certificates/.*$" "/static/404";
+"~^/block-supports/.*$" "/static/404";
+"~^/blocks/.*$" "/static/404";
+"~^/block-patterns/.*$" "/static/404";
+"~^/bac/.*$" "/static/404";
+"~^/amember/.*$" "/static/404";
+"~^/.*/admin-users/.*$" "/static/404";
+"~^/.*SJ_PULSE_DESKTOP_API_URL.*$" "/static/404";
+"~^/.*loggerQueue.*$" "/static/404";
+"~^/.*admin-ajax.php.*$" "/static/404";
+"~^/.*king.php.*$" "/static/404";
+"~^/.*abruzi.php4.*$" "/static/404";
+"~^/.*connector.minimal.php.*$" "/static/404";
+"~^/files.*$" "/static/404";
+"~^/file/.*$" "/static/404";
+"~^/exm.*$" "/static/404";
+"~^/jars/.*$" "/static/404";
+"~^/logs.*$" "/static/404";
+"~^/libs.*$" "/static/404";
+"~^/lib.*$" "/static/404";
+"~^/NEW/.*$" "/static/404";
+"~^/newapi/api.*$" "/static/404";
+"~^/MYzoomsounds/.*$" "/static/404";
+"~^/Site/.*$" "/static/404";
+"~^/services.*$" "/static/404";
+"~^/service.*$" "/static/404";
+"~^/posts/wp-json/.*$" "/static/404";
+"~^/.wp-cli/.*$" "/static/404";
+"~^/widwsisw/.*$" "/static/404";
+"~^/Webstatsdomain.*$" "/static/404";
+"~^/website/blog/.*$" "/static/404";
+"~^/wallets/.*$" "/static/404";
+"~^/wallets.*$" "/static/404";
+"~^/wallet.*$" "/static/404";
+"~^/upload.*$" "/static/404";
+"~^/up/.*$" "/static/404";
+"~^/unauth/.*$" "/static/404";
+"~^/tmps/.*$" "/static/404";
+"~^/Tmp/.*$" "/static/404";
+"~^/tmp.*$" "/static/404";
+"~^/tmb/.*$" "/static/404";
+"~^/tinc/.*$" "/static/404";
+"~^/yourtrc.*$" "/static/404";
+"~^/delhiescort.*$" "/static/404";
+"~^/bvespirita.*$" "/static/404";
+"~^/015qff.*$" "/static/404";
+"~^/.*action=revslider_show_image.*$" "/static/404";
+"~^/.*admin-ajax.php.*$" "/static/404";
+"~^/.*wp-config.php.*$" "/static/404";
+"~^/.*action=add_custom_font.*$" "/static/404";
+"~^/.*Telerik.Web.UI.WebResource.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
