--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4550,3 +4550,4 @@ default "";
 "~^/docs/psychology/1940-tryon-2.pdf.*$" "/docs/psychology/animal/1940-tryon-2.pdf";
 "~^/docs/psychology/1941-tryon.pdf.*$" "/docs/psychology/animal/1941-tryon.pdf";
 "~^/docs/psychology/1941-tryon-2.pdf.*$" "/docs/psychology/animal/1941-tryon-2.pdf";
+"~^/docs/darknet-markets/silk-road/1/2013-11-22-mdpro-6-13-mj-01614-DAB.zip.*$" "/docs/darknet-markets/silk-road/1/2013-11-22-mdpro-6-13-mj-01614-dab.zip";
