--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -944,12 +944,12 @@ default "";
 "~^/docs/modafinil/survey\/$" "/docs/modafinil/survey/index";
 "~^/docs/modafinil/survey/index.htm$" "/docs/modafinil/survey/index";
 "~^/docs/modafinil/survey/index.html$" "/docs/modafinil/survey/index";
-"~^/docs/music-distraction\/$" "/docs/music-distraction/index";
-"~^/docs/music-distraction/index.htm$" "/docs/music-distraction/index";
-"~^/docs/music-distraction/index.html$" "/docs/music-distraction/index";
-"~^/docs/nature\/$" "/docs/nature/index";
-"~^/docs/nature/index.htm$" "/docs/nature/index";
-"~^/docs/nature/index.html$" "/docs/nature/index";
+"~^/docs/music-distraction\/$" "/docs/music/music-distraction/index";
+"~^/docs/music-distraction/index.htm$" "/docs/music/music-distraction/index";
+"~^/docs/music-distraction/index.html$" "/docs/music/music-distraction/index";
+"~^/docs/nature\/$" "/docs/psychology/nature/index";
+"~^/docs/nature/index.htm$" "/docs/psychology/nature/index";
+"~^/docs/nature/index.html$" "/docs/psychology/nature/index";
 "~^/docs/nicotine\/$" "/docs/nicotine/index";
 "~^/docs/nicotine/index.htm$" "/docs/nicotine/index";
 "~^/docs/nicotine/index.html$" "/docs/nicotine/index";
@@ -1111,8 +1111,8 @@ default "";
 "~^/docs/modafinil/$" "/docs/modafinil/index";
 "~^/docs/modafinil/blackmarkets/$" "/docs/modafinil/blackmarkets/index";
 "~^/docs/modafinil/survey/$" "/docs/modafinil/survey/index";
-"~^/docs/music-distraction/$" "/docs/music-distraction/index";
-"~^/docs/nature/$" "/docs/nature/index";
+"~^/docs/music-distraction/$" "/docs/music/music-distraction/index";
+"~^/docs/nature/$" "/docs/psychology/nature/index";
 "~^/docs/nicotine/$" "/docs/nicotine/index";
 "~^/docs/nootropics/$" "/docs/nootropic/index";
 "~^/docs/philo/$" "/docs/philo/index";
@@ -2677,7 +2677,7 @@ default "";
 "~^/docs/iq/2004-van-hiel.pdf.*$" "/docs/iq/2004-vanhiel.pdf";
 "~^/docs/iq/2002-firkowska-mankiewicz.pdf.*$" "/docs/iq/2002-firkowskamankiewicz.pdf";
 "~^/docs/nootropic/2016-carhart-harris.pdf.*$" "/docs/nootropic/2016-carhartharris.pdf";
-"~^/docs/music-distraction/2013-pacheco-unguetti.pdf.*$" "/docs/music-distraction/2013-pachecounguetti.pdf";
+"~^/docs/music-distraction/2013-pacheco-unguetti.pdf.*$" "/docs/music/music-distraction/2013-pachecounguetti.pdf";
 "~^/docs/philosophy/1995-rosati-good.pdf.*$" "/docs/philosophy/1995-rosatigood.pdf";
 "~^/docs/silk-road/2013-van-hout.pdf.*$" "/docs/darknet-markets/2013-vanhout.pdf";
 "~^/docs/spaced-repetition/1991-bangert-drowns.pdf.*$" "/docs/spaced-repetition/1991-bangertdrowns.pdf";
@@ -4551,3 +4551,4 @@ default "";
 "~^/docs/psychology/1941-tryon.pdf.*$" "/docs/psychology/animal/1941-tryon.pdf";
 "~^/docs/psychology/1941-tryon-2.pdf.*$" "/docs/psychology/animal/1941-tryon-2.pdf";
 "~^/docs/darknet-markets/silk-road/1/2013-11-22-mdpro-6-13-mj-01614-DAB.zip.*$" "/docs/darknet-markets/silk-road/1/2013-11-22-mdpro-6-13-mj-01614-dab.zip";
+"~^/docs/psychology/2022-weise.pdf.*$" "/docs/psychology/animal/2022-weise.pdf";
