--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -703,6 +703,8 @@ server {
         rewrite ^/images/ai/diffusion/(?<old>.*)$ /images/ai/nn/diffusion/$old permanent;
         rewrite ^/docs/japanese/(?<old>.*)$ /docs/japan/$old permanent;
         rewrite ^/docs/japan/zeami/(?<old>.*)$ /docs/japan/poetry/zeami/$old permanent;
+        rewrite ^/docs/music-distraction/(?<old>.*)$ /docs/music/music-distraction/$old permanent;
+        rewrite ^/docs/nature/(?<old>.*)$ /docs/psychology/nature/$old permanent;
         rewrite ^/(?<original>docs/.*)/[0-9]$ /$original permanent;
         rewrite ^/(?<original>docs/.*)/[0-9][0-9]$ /$original permanent;
         rewrite ^/(?<original>docs/.*)/[0-9][0-9][0-9]$ /$original permanent;
