--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23816,6 +23816,51 @@
 "~^/best-anime-movies.*$" "/reviews/Anime";
 "~^/static/js/popup.js.*$" "/static/js/popups.js";
 "~^/docs/darknet-markets/2011-11-0$" "/docs/darknet-markets/index";
+"~^/docs/-science/1978-blackford.pdf.*$" "/docs/science/1978-blackford.pdf";
+"~^/Black--market-survival.*$" "/DNM-survival";
+"~^/static/typography\?.*$" "/static/typography.js";
+"~^/static/transclude\?.*$" "/static/transclude.js";
+"~^/static/rewrite\?.*$" "/static/rewrite.js";
+"~^/static/reader-mode\?.*$" "/static/reader-mode.js";
+"~^/static/popups\?.*$" "/static/popups.js";
+"~^/static/popins\?.*$" "/static/popins.js";
+"~^/static/js/darkmode.js\?.*$" "/static/js/darkmode.js.js";
+"~^/static/image-focus\?.*$" "/static/image-focus.js";
+"~^/static/Hyphenopoly_Loader\?.*$" "/static/Hyphenopoly_Loader.js";
+"~^/static/extracts\?.*$" "/static/extracts.js";
+"~^/static/extracts-options\?.*$" "/static/extracts-options.js";
+"~^/static/extracts-content\?.*$" "/static/extracts-content.js";
+"~^/static/extracts-annotations\?.*$" "/static/extracts-annotations.js";
+"~^/static/dark-mode\?.*$" "/static/dark-mode.js";
+"~^/static/collapse\?.*$" "/static/collapse.js";
+"~^/static/annotations\?.*$" "/static/annotations.js";
+"~^/docs/darknet-markets/2011-06-25$" "/docs/darknet-markets/2011-06-25-aakoven.mht";
+"~^/Playfair_Display/.*$" "https://fonts.google.com/specimen/Playfair+Display";
+"~^/lorem/.*$" "/Lorem";
+"~^/docs/www/www.montefiore.ulg.ac.be/favicon.ico/transclude.js.*$" "www.montefiore.ulg.ac.be/favicon.ico";
+"~^/static/img/nlm-ncbi.svg.*$" "/static/img/icons/nlm-ncbi.svg";
+"~^/static/font/drop-cap/Kanzlei-Initialen-S.ttf.*$" "/static/font/drop-cap/kanzlei/Kanzlei-Initialen-S.ttf";
+"~^/notes/Liza$" "/notes/Lizardman-constant";
+"~^/nootropics/https/www.edge.org/conversation/-the-book-of-revelation-prophecy-and-politicsedge-master-class-2011.*$" "https://www.edge.org/conversation/-the-book-of-revelation-prophecy-and-politicsedge-master-class-2011";
+"~^/images/ai/gpt/2020-07-19-oceaninthemiddleofanisland-gpt3-chinesepoetrytranslation.png-768px.png.*$" "/images/ai/gpt/2020-07-19-oceaninthemiddleofanisland-gpt3-chinesepoetrytranslation.png";
+"~^/feeds/posts/.*$" "https://gwern.substack.com/feed";
+"~^/faceshttps:/www.gwern.net/faces.*$" "/Faces";
+"~^/docs/technology/2005-shirky-agroupisit\.\.\..*$" "/docs/technology/2005-shirky-agroupisitsownworstenemy.pdf";
+"~^/docs/statistics/bayes/2009-kaas$" "/docs/statistics/bayes/2009-kaas.html";
+"~^/docs/music-dihttp:/www.gwern.net/docs/music-distraction/1989-mayfield.pdfstraction/1989-mayfield.pdf.*$" "/docs/music/music-distraction/1989-mayfield.pdf";
+"~^/docs/modafinil/darknet-market/2021-11-17.tar.xz.*$" "/docs/modafinil/darknet-market/";
+"~^/docs/iq/2007-sterne.pdf.*$" "/docs/iq/ses/2007-strenze.pdf";
+"~^/docs/gwern-mnemosyne-python-hard-way.txt.*$" "/docs/personal/mnemosyne-python-hard-way.txt";
+"~^/docs/darknet-markets/william-pickard/2003-pickard-lsd-trial-transcript-rogerely-1.*docs/darknet-markets/william-pickard/2003-pickard-lsd-trial-transcript-rogerely-2.pdf.*$" "/docs/darknet-markets/william-pickard/";
+"~^/docs/darknet-markets/pickard/2003-pickard-lsd-trial-transcript-gordontoddskinner-02.pdf.*$" "/docs/darknet-markets/william-pickard/2003-pickard-lsd-trial-transcript-gordontoddskinner-02.pdf";
+"~^/docs/darknet-markets/2019-04-22-deepdotweb-dnmlist.h$" "/docs/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
+"~^/docs/darknet-markets/2019-04-22-deepdotweb-dnmlist.h%C3%A0m$" "/docs/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
+"~^/docs/darknet-markets/2019-04-22-deepdotweb-dnmlist.h%C3%A0$" "/docs/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
+"~^/docs/darknet-markets/2013-05$" "/docs/darknet-markets/";
+"~^/docs/darknet-markets/2011-10-0.*$" "/docs/darknet-markets/2011-10-27-enterthematrix.maff";
+"~^/docs/darknet-markets/2011-06-25-aakoven$" "/docs/darknet-markets/2011-06-25-aakoven.mht";
+"~^/docs/2003-murr$" "/docs/sociology/2003-murray-humanaccomplishment.pdf";
+"~^/blackmarket-archives.*$" "/DNM-archives";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -28583,6 +28628,25 @@
 "~^/punpgslot.*$" "/static/404";
 "~^/playslot888.*$" "/static/404";
 "~^/.*indoxploit.php.*$" "/static/404";
+"~^/3.8-MB.*$" "/static/404";
+"~^/resources.*$" "/static/404";
+"~^/Kodbox/index.php.*$" "/static/404";
+"~^/fontSizeChange.*$" "/static/404";
+"~^/.*plugins/html404/index.html.*$" "/static/404";
+"~^/wps/cmis_proxy.*$" "/static/404";
+"~^/ueditor_kejin/.*$" "/static/404";
+"~^/.*/ueditor/.*$" "/static/404";
+"~^/solo.to%2Fsitusplay365.*$" "/static/404";
+"~^/signup\?ref.*$" "/static/404";
+"~^/Scripts.*$" "/static/404";
+"~^/repaircddvd.com.*$" "/static/404";
+"~^/L\.setup.*$" "/static/404";
+"~^/javascripts/.*$" "/static/404";
+"~^/cscard.vn.*$" "/static/404";
+"~^/Content/.*$" "/static/404";
+"~^/beifenw/.*$" "/static/404";
+"~^/automxh.*$" "/static/404";
+"~^/0byte.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
