--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23802,7 +23802,7 @@
 "~^/Death-Note-script3.*$" "/Death-Note-script";
 "~^/\[Dd\]esign-G.*$" "/Design";
 "~^/Culture-is-not-about-esthetics.html.*$" "/Culture-is-not-about-esthetics";
-"~^/Causality-\|*$" "/Causality";
+"~^/Causality-\.*$" "/Causality";
 "~^/Causalityr.*$" "/Causality";
 "~^/blackmarket-survival.*$" "/DNM-survival";
 "~^/About-exit-scam.*$" "/About";
