--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23750,6 +23750,63 @@
 "~^/docs/nootropic/quantified-self/2014-08$" "/docs/nootropic/quantified-self/2014-08-03-lllt-correlation.csv";
 "~^/static/css/default.hs.*$" "/static/css/default.css";
 "~^/N.*/static/img/favicon.png.*$" "/static/img/favicon.png";
+"~^/docs/sr/2019-04-22-deepdotweb-dnmlist.ht$" "/docs/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
+"~^/docs/rotten.com/library/sex/hymen/images-hymen1.jpg.*$" "/docs/rotten.com/library/sex/hymen/images-hymen2.jpg";
+"~^/docs/rotten.com/library/sex/hymen/images-hymen3.jpg.*$" "/docs/rotten.com/library/sex/hymen/images-hymen2.jpg";
+"~^/traffic/20110702-20120102-gwern.net-analytics.pdf.*$" "/docs/traffic/20110702-20120102-gwern.net-analytics.pdf";
+"~^/docs/lesswrong-survey/2013-%C3%B0.*$" "/docs/lesswrong-survey/index";
+"~^/./tags/experiments.*$" "/docs/nootropic/quantified-self/index";
+"~^/static/img/icons/erowid-old.svg.*$" "/static/img/icons/erowid.svg";
+"~^/sicp/Chapter-%C2%BF.*$" "/sicp/index";
+"~^/Scaling-hypothesis\[18.*$" "/Scaling-hypothesis";
+"~^/docs/sociology/2014-02$" "/docs/sociology/2014-02-25-matter-themanwhodestroyedamericasego.html";
+"~^/docs/reinforcement-learning/deepmind/2020-deepmind-fullaccounts.pdf.Frankelius.*$" "/docs/reinforcement-learning/deepmind/2020-deepmind-fullaccounts.pdf";
+"~^/docs/personal/2011-gwern-gjp-forecastresults$" "/docs/personal/2011-gwern-gjp-forecastresults.html";
+"~^/docs/darknet-markets/2012-04-1$" "/docs/darknet-markets/silk-road/1/2012-04-18-vitacatreviews.maff";
+"~^/docs/ai/poetry/2019-05-24-gpt2-poetry-yeatssecondcoming-500completions$" "/docs/ai/poetry/2019-05-24-gpt2-poetry-yeatssecondcoming-500completions.txt";
+"~^/TLjS.*$" "https://github.com/theJian/tljs";
+"~^/%5BtT%5Dhe-Scaling.*$" "/The-Scaling-Hypothesis";
+"~^/.*/register/$" "/static/404.html";
+"~^/GPT-2/GPT-2.*$" "/GPT-2";
+"~^/Nootropicsmixing.*$" "/Nootropics";
+"~^/_Twig.*$" "https://twigserial.wordpress.com/";
+"~^/_Utena.*" "/docs/anime/1997-utena";
+"~^/complememt.*$" "/Complement";
+"~^/dmm-archives.*$" "/DNM-archives";
+"~^/docs/ai/poetry/2016-1$" "/docs/ai/poetry/index";
+"~^/docs/ai/poetry/2019-03-16-gpt2-poetry-prefix-jabberwocky-1$" "/docs/ai/poetry/2019-03-16-gpt2-poetry-prefix-jabberwocky-100samples.txt";
+"~^/docs/ai/poetry/2019-05-24-gpt2-poetry-yeatssecondcoming$" "/docs/ai/poetry/2019-05-24-gpt2-poetry-yeatssecondcoming-500completions.txt";
+"~^/docs/anime/2014-tamer$" "/docs/anime/2014-tamerlane-animeyearbyyear-2001.html";
+"~^/docs/darknet-markets/2011-06-21-1$" "/docs/darknet-markets/2011-06-21-pgpkeys.maff";
+"~^/docs/darknet-markets/2011-08-1$" "/docs/darknet-markets/2011-08-25-baal-operationachilles.html";
+"~^/docs/fiction/2014-01-10-thepracticalconservative-whybroniesaresuperiortotheneoreaction$" "/docs/fiction/2014-01-10-thepracticalconservative-whybroniesaresuperiortotheneoreaction.html";
+"~^/docs/history/2019-09-18-1$" "/docs/history/2019-09-18-medievalindonesia-thelandshuterhochzeit1475.html";
+"~^/docs/ifrench-school-ask-for-iq-testq/2019-platt.pdf.*$" "/docs/iq/2019-platt.pdf";
+"~^/docs/modafinil/darknet-market/2013-0$" "/docs/modafinil/darknet-market/";
+"~^/docs/nootropics$" "/docs/nootropic/index";
+"~^/docs/philosophy/epistemology/2012-inwagen$" "/docs/philosophy/epistemology/2012-inwagen.html";
+"~^/docs/philosophy/mind/2004-perry$" "/docs/philosophy/mind/2004-perry.html";
+"~^/docs/psychology/personality/2src2src-gabay.pdf.*$" "/docs/psychology/personality/2020-gabay.pdf";
+"~^/docs/psychology/spaced-repetition/2009-goverover$" "/docs/psychology/spaced-repetition/2009-goverover.pdf";
+"~^/docs/.*/Language$" "/Language";
+"~^/docs/st$" "/docs/statistics/index";
+"~^/docs/stat$" "/docs/statistics/index";
+"~^/docs/statistics/decision/1986-stephens-foragingtheory.pdfAnts.*$" "/docs/statistics/decision/1986-stephens-foragingtheory.pdf";
+"~^/docs/statistics/decision/2016-1$" "/docs/statistics/decision/index";
+"~^/docs/surfsmartvpn.co.uk/why-surf-smart/.*$" "https://surfsmartvpn.co.uk/why-surf-smart/";
+"~^/docs/technology/2018-07-25-johnbackus-howdecentralizationevolves.html/$" "/docs/technology/2018-07-25-johnbackus-howdecentralizationevolves.html";
+"~^/docs/www/crypko.ai/static/update_20190401/chara-design-2.png.*$" "https://crypko.ai/static/update_20190401/chara-design-2.png";
+"~^/docs/www/crypko.ai/static/update_20190401/chara-design.png.*$" "https://crypko.ai/static/update_20190401/chara-design.png";
+"~^/docs/www/crypko.ai/static/update_20190401/female.mp4.*$" "https://crypko.ai/static/update_20190401/female.mp4";
+"~^/docs/www/crypko.ai/static/update_20190401/male.mp4.*$" "https://crypko.ai/static/update_20190401/male.mp4";
+"~^/docs/www/crypko.ai/static/update_20190401/purple-eye-2.mp4.*$" "https://crypko.ai/static/update_20190401/purple-eye-2.mp4";
+"~^/docs/www/crypko.ai/static/update_20190401/purple-mouth-2.mp4.*$" "https://crypko.ai/static/update_20190401/purple-mouth-2.mp4";
+"~^/docs/www/empiria.io/img/logo.png.*$" "https://empiria.io/img/logo.png";
+"~^/docs/www/tthqi.free.fr/BOUTONS/NOTRE%20IDEAL%20dessus.png.*$" "https://tthqi.free.fr/BOUTONS/NOTRE%20IDEAL%20dessus.png";
+"~^/docs/www/tthqi.free.fr/BOUTONS/acceuil%20dessus.png.*$" "https://tthqi.free.fr/BOUTONS/acceuil%20dessus.png";
+"~^/docs/www/tthqi.free.fr/BOUTONS/documents%20dessus.png.*$" "https://tthqi.free.fr/BOUTONS/documents%20dessus.png";
+"~^/docs/www/tthqi.free.fr/BOUTONS/forum%20dessus.png.*$" "https://tthqi.free.fr/BOUTONS/forum%20dessus.png";
+"~^/static/image-focus.*$" "/static/js/image-focus.js";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*/GET$" "/static/404";
@@ -28540,6 +28597,61 @@
 "~^/en.wiki.a51..*$" "/static/404";
 "~^/dvdmg.com.*$" "/static/404";
 "~^/urlku.info.*$" "/static/404";
+"~^/david-h-sculpteur.*$" "/static/404";
+"~^/cover.gnu-darwin.*$" "/static/404";
+"~^/billvolhein.*$" "/static/404";
+"~^/7\&yearend.*$" "/static/404";
+"~^/%5BCc%5Dontact.*$" "/static/404";
+"~^/1.bp.blogspot.com/.*$" "/static/404";
+"~^/17salsa.com.*$" "/static/404";
+"~^/free.xpornsites.*$" "/static/404";
+"~^/freepbx/.*$" "/static/404";
+"~^/floridafilmofficeinc.co.*$" "/static/404";
+"~^/firsturl.*$" "/static/404";
+"~^/en6S.*$" "/static/404";
+"~^/dsrwiki..*$" "/static/404";
+"~^/ippbx/.*$" "/static/404";
+"~^/indiafuns.*$" "/static/404";
+"~^/imaginingourselves.*$" "/static/404";
+"~^/hansolav.net%2Fblog.*$" "/static/404";
+"~^/pcsc.phsgetcare.org.*$" "/static/404";
+"~^/.*ichiban-project.ucoz.*$" "/static/404";
+"~^/.*/adcardz.com.*$" "/static/404";
+"~^/.*moneytraffic.*$" "/static/404";
+"~^/function/editor/.*$" "/static/404";
+"~^/.*/upload_json.php.*$" "/static/404";
+"~^/.*Slotbet138.com%.*$" "/static/404";
+"~^/onlyfans.com%2F.*$" "/static/404";
+"~^/.*missplayboyboss.*$" "/static/404";
+"~^/ZYTOKINE.*$" "/static/404";
+"~^/yanisro.com%2.*$" "/static/404";
+"~^/wzbf/.*$" "/static/404";
+"~^/wiki.uni-due.de.*$" "/static/404";
+"~^/validator.w3.org/.*$" "/static/404";
+"~^/.*ollerID.=*.*$" "/static/404";
+"~^/type/.*$" "/static/404";
+"~^/thesishelp..*$" "/static/404";
+"~^/System/filemanager.*$" "/static/404";
+"~^/.*/springfieldcards.mtpsoftware.com.*$" "/static/404";
+"~^/.*/nwfpwichita.pdswebpro.com.*$" "/static/404";
+"~^/softburg.r.*$" "/static/404";
+"~^/sextforum.com.*$" "/static/404";
+"~^/recordings/.*$" "/static/404";
+"~^/radiouese.com.*$" "/static/404";
+"~^/ohart.wiki.*$" "/static/404";
+"~^/myasterisk/a.*$" "/static/404";
+"~^/mlc.vigicorp..*$" "/static/404";
+"~^/madonna-chism-.*$" "/static/404";
+"~^/javascript:gotourl.*$" "/static/404";
+"~^/javascript/filemanager.*$" "/static/404";
+"~^/irvinecaliforniasummercamps.*$" "/static/404";
+"~^/FILEMANAGER.*$" "/static/404";
+"~^/Filemanager.*$" "/static/404";
+"~^/filemanager.*$" "/static/404";
+"~^/.*/dialog.php.*$" "/static/404";
+"~^/emailcaddie.*$" "/static/404";
+"~^/chdntech.com.*$" "/static/404";
+"~^/CD11b.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
