--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23807,6 +23807,44 @@
 "~^/docs/www/tthqi.free.fr/BOUTONS/documents%20dessus.png.*$" "https://tthqi.free.fr/BOUTONS/documents%20dessus.png";
 "~^/docs/www/tthqi.free.fr/BOUTONS/forum%20dessus.png.*$" "https://tthqi.free.fr/BOUTONS/forum%20dessus.png";
 "~^/static/image-focus.*$" "/static/js/image-focus.js";
+"~^/docs/psychology/tinder/index.*$" "/docs/psychology/okcupid/index";
+"~^/GPT-hk.*$" "/GPT-3";
+"~^/docs/psychology/writing/1990-$" "&/docs/psychology/writing/index";
+"~^/docs/plume.fedi.quebec/@/banglanews/2005-shirky-agroupisitsownworstenemy.pdf.*$" "/docs/technology/2005-shirky-agroupisitsownworstenemy.pdf";
+"~^/notenki-memoirs/index.*$" "/docs/anime/eva/index";
+"~^/docs/crime/terrorism/2016-rumiyah$" "/docs/crime/terrorism/2016-rumiyah-3.pdf";
+"~^/static/index.html.*$" "https://github.com/gwern/gwern.net/";
+"~^/docs/cs/algorithm/favicon.ico.*$" "/static/img/favicon.ico";
+"~^/Tankshttps.*$" "/Tanks";
+"~^/static/img/icons/pdf.sv$" "/static/img/icons/pdf.svg";
+"~^/Sidnotes.*$" "/Sidenotes";
+"~^/sacredness_cartoon_process.php_files/surveyresults_graph_libcon.png.*$" "/docs/personal/2011-gwern-yourmorals.org/sacredness_cartoon_process.php_files/surveyresults_graph_libcon.png";
+"~^/sacredness_cartoon_process.php_files/surveyresults_graph_libcon_002.png.*$" "/docs/personal/2011-gwern-yourmorals.org/sacredness_cartoon_process.php_files/surveyresults_graph_libcon_002.png
+";
+"~^/otakuhttps:/www.gwern.net/otaku.*$" "/otaku";
+"~^/\.\/images/logo-smooth.svg.*$" "/static/img/logo/logo-smooth.svg";
+"~^/http:/www.thiswaifudoesnotexist.net/index.html.*$" "http:/www.thiswaifudoesnotexist.net/";
+"~^/https:/www.aleph.se/papers/Spamming-the-universe.pdf.*$" "https://www.aleph.se/papers/Spamming%20the%20universe.pdf";
+"~^/GPT-2-folk-music.*$" "/GPT-2-music";
+"~^/github.com/sberbank-ai/ru-dolph.*$" "https://github.com/ai-forever/ru-dolph";
+"~^/GANs%5Cn%5Bhttps://www.gwern.net/GAN.*$" "/GANs";
+"~^/docs/spaced-repetition$" "/docs/spaced-repetition/index";
+"~^/docs/sociology/2003-murray-humanaccomplishment.pdfgwer.*$" "/docs/sociology/2003-murray-humanaccomplishment.pdf";
+"~^/docs/psychology/2015-1$" "/docs/psychology/index";
+"~^/docs/predictions/+2001-principlesforecasting.pdf.*$" "/docs/statistics/prediction/2001-armstrong-principlesforecasting.pdf";
+"~^/docs/philosophy/1955-tibawi.pdf.*$" "/docs/philosophy/brethren-of-purity/1955-tibawi.pdf";
+"~^/docs/other$" "/docs/index";
+"~^/docs/iq/ses/index%5Cn%5Bhttps.*$" "/docs/iq/ses/index";
+"~^/docs/iq/2015-strenze.pdf%5B.*$" "/docs/iq/2015-strenze.pdf";
+"~^/docs/economics/advertising/2019-03-18-1$" "/docs/economics/advertising/2019-03-18-googlesurveys-adblocker.csv";
+"~^/docs/darknet-markets/2013-1$" "/docs/darknet-markets/2013-11-21-assassinationmarket.maff";
+"~^/docs/darknet-markets/2011-08-25-0$" "/docs/darknet-markets/2011-08-25-baal-operationachilles.html";
+"~^/DNB\+FAQ.*$" "/DNB-FAQ";
+"~^/disgust_process.php_files/surveyresults_graph_libcon.png.*$" "/docs/personal/2011-gwern-yourmorals.org/disgust_process.php_files/surveyresults_graph_libcon.png";
+"~^/Death+Note+Anonymityhttps.*$" "/Death-Note-Anonymity";
+"~^/Danbooru2020\[.*$" "/Danbooru2020";
+"~^/Danbooru2017nn.*$" "/Danbooru2017";
+"~^/About-cache.*$" "/About";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*/GET$" "/static/404";
@@ -28652,6 +28690,30 @@
 "~^/emailcaddie.*$" "/static/404";
 "~^/chdntech.com.*$" "/static/404";
 "~^/CD11b.*$" "/static/404";
+"~^/ohutneoh.*$" "/static/404";
+"~^/htonuh.*$" "/static/404";
+"~^/southernmranch.com.*$" "/static/404";
+"~^/pipefittings-flanges.*$" "/static/404";
+"~^/k12innovation.*$" "/static/404";
+"~^/hr$" "/static/404";
+"~^/hampus.biz.*$" "/static/404";
+"~^/.*undefinedAdobe.*$" "/static/404";
+"~^/mailto:.*$" "/static/404";
+"~^/Upload/.*$" "/static/404";
+"~^/jsupload/.*$" "/static/404";
+"~^/jquery_files/.*$" "/static/404";
+"~^/fileupload/.*$" "/static/404";
+"~^/file-upload/s.*$" "/static/404";
+"~^/fileuploader/.*$" "/static/404";
+"~^/vest-home.ru.*$" "/static/404";
+"~^/the0barrin.psend.*$" "/static/404";
+"~^/slot5000.game.*$" "/static/404";
+"~^/.sendgrid.*$" "/static/404";
+"~^/s.acbpro.com.*$" "/static/404";
+"~^/.*www.oofyzone.com.*$" "/static/404";
+"~^/gbogroup.id.*$" "/static/404";
+"~^/Forums.tar.gz.*$" "/static/404";
+"~^/beeman.ro.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
