--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -84,7 +84,12 @@ server {
         charset_types htm text/css text/csv text/markdown text/plain text/x-diff text/x-haskell text/x-opml text/x-patch text/x-php text/x-r text/x-shellscript text/yaml;
 
         ## somewhat aggressive caching:
-        add_header Cache-Control "max-age=77760000, public";
+        add_header Cache-Control "max-age=77760000, public, immutable";
+
+        # prefetch gwern.net site logo:
+        add_header Link "</static/img/logo/logo-smooth.svg#logo>; rel=preload; as=image; fetchpriority=high";
+        # add_header Link "</static/css/fonts.css?v=1655420134>; rel=preload; as=style; fetchpriority=high";
+        # add_header Link "</static/css/default.css?v=1669354834>; rel=preload; as=style; fetchpriority=high";
 
         ## allow directory browsing, particularly useful for /docs/*
         autoindex on;
