--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -3744,7 +3744,7 @@
 "~^/docs/terrorism/2010-king\.pdfon$" "/docs/terrorism/2010-king.pdf";
 "~^/docs/2011-dannenbaum\.pdf$" "/docs/terrorism/2011-dannenbaum.pdf";
 "~^/docs/terrorism/2012-abrahms\.pdf\.$" "/docs/terrorism/2012-abrahms.pdf";
-"~^/docs/www/pietervanostaeyen\.files\.wordpress\.com/fde87f94592c5c2d638d9121d652604271560325\.html$" "/docs/terrorism/2016-rumiyah-3.pdf";
+"~^/docs/www/pietervanostaeyen\.files\.wordpress\.com/fde87f94592c5c2d638d9121d652604271560325\.html$" "/docs/terrorism/rumiyah/2016-rumiyah-03.pdf";
 "~^/docs/tominga/1987-najita-visionsofvirtue-excerpts\.pdf$" "/docs/tominaga/1987-najita-visionsofvirtue-excerpts.pdf";
 "~^/docs/tominaga/1998-faure-redthread-ch2\.pdf$" "/docs/tominaga/1998-faure-redthread-ch4.pdf";
 "~^/docs/2013-gwern-touhoumusic-torrent\.csv$" "/docs/touhou/2013-torrent.csv";
@@ -10270,7 +10270,7 @@
 "~^/2016-rinaldo.pdf$" "/docs/catnip/2016-rinaldo.pdf";
 "~^/2016-robinson.pdf$" "/docs/genetics/correlation/2016-robinson.pdf";
 "~^/2016-ross.pdf$" "/docs/nootropics/2016-ross.pdf";
-"~^/2016-rumiyah-3.pdf$" "/docs/terrorism/2016-rumiyah-3.pdf";
+"~^/2016-rumiyah-3.pdf$" "/docs/terrorism/rumiyah/2016-rumiyah-03.pdf";
 "~^/2016-sala.pdf$" "/docs/iq/2016-sala.pdf";
 "~^/2016-salvatore.pdf$" "/docs/genetics/correlation/2016-salvatore.pdf";
 "~^/2016-scheiber.pdf$" "/docs/iq/2016-scheiber.pdf";
@@ -19802,7 +19802,7 @@
 "~^/tutorial.*$" "/tags/tutorial";
 "~^/dnm-archives,.*$" "/DNM-archives";
 "~^/docs/nicotine/1996-foulds.pdf1.*$" "/docs/nicotine/1996-foulds.pdf";
-"~^/docs/terrorism/2016-rumiyah-2.pdf.*$" "https://icct.nl/publication/rumiyah-issue-2-english-rallying-the-true-believers-as-hardship-purifies-the-ranks/";
+"~^/docs/terrorism/2016-rumiyah-2.pdf.*$" "/docs/terrorism/rumiyah/2016-rumiyah-02.pdf";
 "~^/SF$" "/tags/SF";
 "~^/selection.*$" "/Selection";
 "~^/GPT-28.*$" "/GPT-2";
@@ -23812,7 +23812,7 @@
 "~^/docs/psychology/writing/1990-$" "&/docs/psychology/writing/index";
 "~^/docs/plume.fedi.quebec/@/banglanews/2005-shirky-agroupisitsownworstenemy.pdf.*$" "/docs/technology/2005-shirky-agroupisitsownworstenemy.pdf";
 "~^/notenki-memoirs/index.*$" "/docs/anime/eva/index";
-"~^/docs/crime/terrorism/2016-rumiyah$" "/docs/crime/terrorism/2016-rumiyah-3.pdf";
+"~^/docs/crime/terrorism/2016-rumiyah$" "/docs/crime/terrorism/rumiyah/index";
 "~^/static/index.html.*$" "https://github.com/gwern/gwern.net/";
 "~^/docs/cs/algorithm/favicon.ico.*$" "/static/img/favicon.ico";
 "~^/Tankshttps.*$" "/Tanks";
@@ -23845,6 +23845,15 @@
 "~^/Danbooru2020\[.*$" "/Danbooru2020";
 "~^/Danbooru2017nn.*$" "/Danbooru2017";
 "~^/About-cache.*$" "/About";
+"~^/docs/crime/terrorism/2016-rumiyah$" "/docs/crime/terrorism/rumiyah/index";
+"~^/docs/crime/terrorism/2016-rumiyah-1.pdf.*$" "/docs/crime/terrorism/rumiyah/2016-rumiyah-01.pdf";
+"~^/docs/crime/terrorism/2016-rumiyah-1pdf.*$" "/docs/crime/terrorism/rumiyah/2016-rumiyah-01.pdf";
+"~^/docs/crime/terrorism/2016-rumiyah-2.pdf.*$" "/docs/crime/terrorism/rumiyah/2016-rumiyah-02.pdf";
+"~^/static/build/generateSimilar.o.*$" "/static/build/generateSimilar.hs";
+"~^/LSD-microdosingnn.*$" "/LSD-microdosing";
+"~^/docs/[a-km-z].*/EA-donations.*$" "/EA-donations";
+"~^/docs/japan/%C2.*$" "/docs/japan/index";
+"~^/DNB-meta-analysis-reddit.*$" "/DNB-meta-analysis";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*/GET$" "/static/404";
@@ -28714,6 +28723,7 @@
 "~^/gbogroup.id.*$" "/static/404";
 "~^/Forums.tar.gz.*$" "/static/404";
 "~^/beeman.ro.*$" "/static/404";
+"~^/.*trunkmoney.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
