--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4552,3 +4552,4 @@ default "";
 "~^/docs/darknet-markets/silk-road/1/2013-11-22-mdpro-6-13-mj-01614-DAB.zip.*$" "/docs/darknet-markets/silk-road/1/2013-11-22-mdpro-6-13-mj-01614-dab.zip";
 "~^/docs/psychology/2022-weise.pdf.*$" "/docs/psychology/animal/2022-weise.pdf";
 "~^/docs/ai/anime/danbooru/2022-ko.pdf.*$" "/docs/ai/anime/2022-ko.pdf";
+"~^/docs/crime/terrorism/2016-rumiyah-3.pdf.*$" "/docs/crime/terrorism/rumiyah/2016-rumiyah-03.pdf";
