--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4553,3 +4553,5 @@ default "";
 "~^/docs/psychology/2022-weise.pdf.*$" "/docs/psychology/animal/2022-weise.pdf";
 "~^/docs/ai/anime/danbooru/2022-ko.pdf.*$" "/docs/ai/anime/2022-ko.pdf";
 "~^/docs/crime/terrorism/2016-rumiyah-3.pdf.*$" "/docs/crime/terrorism/rumiyah/2016-rumiyah-03.pdf";
+"~^/docs/iq/2016-okbay-2.pdf.*$" "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4883595/";
+"~^/docs/ai/2019-02-27-synced-fromfacestokittiestoapartments.html.*$" "/docs/ai/nn/gan/stylegan/2019-02-27-synced-fromfacestokittiestoapartments.html";
